--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /target
+/target/*
 /src/main/resources/conf/jdbc.properties
 /src/main/resources/conf/log4j.properties
 /src/main/webapp/WEB-INF/logs/*
