--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@
 /target/*
 /src/main/resources/conf/jdbc.properties
 /src/main/resources/conf/log4j.properties
-/src/main/webapp/WEB-INF/logs/*
+/src/main/webapp/WEB-INF/logs/*.log
