--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,14 @@
 		<mysql.connector.version>5.1.29</mysql.connector.version>
 		<druid.version>1.0.16</druid.version>
 		<jstl.version>1.2</jstl.version>
+		<junit.version>4.11</junit.version>
+		<jacksoncore.version>2.6.3</jacksoncore.version>
+		<jacksondatabind.version>2.6.3</jacksondatabind.version>
+		<jacksonannot.version>2.6.3</jacksonannot.version>
+		<combeanutl.version>1.9.2</combeanutl.version>
+		<comcollection.version>3.2.1</comcollection.version>
+		<comlang.version>2.6</comlang.version>
+		<comlogging.version>1.2</comlogging.version>
 	</properties>
 
 	<dependencies>
@@ -75,7 +83,7 @@
 			<artifactId>spring-test</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>jstl</groupId>
 			<artifactId>jstl</artifactId>
@@ -108,7 +116,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.11</version>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -121,10 +129,45 @@
 
 		<!-- json数据 -->
 		<dependency>
-			<groupId>org.codehaus.jackson</groupId>
-			<artifactId>jackson-mapper-asl</artifactId>
-			<version>1.9.13</version>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>${jacksoncore.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jacksondatabind.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>${jacksonannot.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>${combeanutl.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-collections</groupId>
+			<artifactId>commons-collections</artifactId>
+			<version>${comcollection.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>${comlang.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>${comlogging.version}</version>
+		</dependency>
+
 
 		<!-- 日志文件管理包 -->
 		<!-- log start -->
@@ -159,18 +202,10 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
-			<!-- 
-			<plugin>
-				<groupId>org.apache.tomcat.maven</groupId>
-				<artifactId>tomcat7-maven-plugin</artifactId>
-				<version>2.2</version>
-				<configuration>
-					<url>http://127.0.0.1:8080/manager/text</url>
-					<server>tomcat.deploy</server>
-					<path>/university</path>
-				</configuration>
-			</plugin>
-			-->
+			<!-- <plugin> <groupId>org.apache.tomcat.maven</groupId> <artifactId>tomcat7-maven-plugin</artifactId> 
+				<version>2.2</version> <configuration> <url>http://127.0.0.1:8080/manager/text</url> 
+				<server>tomcat.deploy</server> <path>/university</path> </configuration> 
+				</plugin> -->
 		</plugins>
 	</build>
 </project>
