--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 		<comcollection.version>3.2.1</comcollection.version>
 		<comlang.version>2.6</comlang.version>
 		<comlogging.version>1.2</comlogging.version>
+		<spring.session.version>1.0.2.RELEASE</spring.session.version>
 	</properties>
 
 	<dependencies>
@@ -82,6 +83,12 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<version>${spring.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session</artifactId>
+			<version>${spring.session.version}</version>
 		</dependency>
 
 		<dependency>
