忽略百度编辑器的config.json的版本控制

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /src/main/resources/conf/cookieSession.properties
 /src/main/resources/conf/log4j.properties
 /src/main/webapp/WEB-INF/logs/*.log
+/src/main/webapp/WEB-INF/classes/com/baidu/ueditor/config.json
