添加附件上传功能

--- a/src/main/resources/conf/sysHardCodeVal.properties
+++ b/src/main/resources/conf/sysHardCodeVal.properties
@@ -2,3 +2,8 @@ SysDefaultLanguage=ZHS
 MenuTreeName=TZ_GD_GNCD_MENU
 DateFormate=yyyy-MM-dd
 DateTimeFormate=yyyy-MM-dd HH:mm:ss
+FileUploadDeniedExtensions=php|php3|php5|phtml|asp|aspx|ascx|jsp|cfm|cfc|pl|bat|exe|dll|reg|cgi|js|html|htm|css|bak
+ImageSuffix=jpg|jpeg|png|gif|bmp
+FileUploadMaxSize=10240000
+OrgFileUploadPath=\/statics\/uploadfiles\/orgupload
+WebsiteFileUploadPath=\/statics\/uploadfiles\/website
