--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 	<url>http://maven.apache.org</url>
 
 	<properties>
+		<servlet.version>3.1.0</servlet.version>
 		<spring.version>4.2.1.RELEASE</spring.version>
 		<mybatis.version>3.3.0</mybatis.version>
 		<mybatis.spring.version>1.2.3</mybatis.spring.version>
@@ -26,10 +27,18 @@
 		<comlang.version>2.6</comlang.version>
 		<comlogging.version>1.2</comlogging.version>
 		<spring.session.version>1.0.2.RELEASE</spring.session.version>
-
+		<uplfile.version>1.3.1</uplfile.version>
+		<commonsio.version>2.4</commonsio.version>
 	</properties>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>${servlet.version}</version>
+		</dependency>
+
 		<!-- spring核心包 -->
 		<!-- springframe start -->
 		<dependency>
@@ -183,13 +192,26 @@
 			<version>0.0.1</version>
 		</dependency>
 
-	    <!-- 百度编辑器用到的json解析包  -->
+		<!-- 百度编辑器用到的json解析包 -->
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
 			<version>20150729</version>
 		</dependency>
 
+		<!-- Apache Commons FileUpload -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>${uplfile.version}</version>
+		</dependency>
+
+		<!-- Apache Commons IO -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>${commonsio.version}</version>
+		</dependency>
 
 		<!-- 日志文件管理包 -->
 		<!-- log start -->
