--- a/src/main/resources/conf/sysHardCodeVal.properties
+++ b/src/main/resources/conf/sysHardCodeVal.properties
@@ -7,3 +7,4 @@ ImageSuffix=jpg|jpeg|png|gif|bmp
 FileUploadMaxSize=10240000
 OrgFileUploadPath=\/statics\/uploadfiles\/orgupload
 WebsiteFileUploadPath=\/statics\/uploadfiles\/website
+TmpFileUploadPath=\/statics\/uploadfiles\/tmpfiles
