--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 		<uplfile.version>1.3.1</uplfile.version>
 		<commonsio.version>2.4</commonsio.version>
 		<comcodec.version>1.10</comcodec.version>
+		<imgscalr.version>4.2</imgscalr.version>
 	</properties>
 
 	<dependencies>
@@ -219,6 +220,12 @@
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>${commonsio.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.imgscalr</groupId>
+			<artifactId>imgscalr-lib</artifactId>
+			<version>${imgscalr.version}</version>
 		</dependency>
 
 		<!-- 日志文件管理包 -->
