--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,8 @@
 		<imgscalr.version>4.2</imgscalr.version>
 		<mail.version>1.5.0-b01</mail.version>
 		<aspectj.version>1.8.7</aspectj.version>
+		<comlang3.version>3.4</comlang3.version>
+		<freemarker.version>2.3.12</freemarker.version>
 	</properties>
 
 	<dependencies>
@@ -241,6 +243,18 @@
 			<groupId>javax.mail</groupId>
 			<artifactId>mail</artifactId>
 			<version>${mail.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>${comlang3.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.sun.phobos</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>${freemarker.version}</version>
 		</dependency>
 
 		<!-- 日志文件管理包 -->
