机构功能：招生网站站点信息设置、站点风格选择、用户显示信息项配置；会员数据项管理

--- a/src/main/resources/conf/sysHardCodeVal.properties
+++ b/src/main/resources/conf/sysHardCodeVal.properties
@@ -1,4 +1,5 @@
 SysDefaultLanguage=ZHS
+PlatformOrgID=Admin
 MenuTreeName=TZ_GD_GNCD_MENU
 DateFormate=yyyy-MM-dd
 DateTimeFormate=yyyy-MM-dd HH:mm:ss
