--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,12 @@
 
 	<properties>
 		<servlet.version>3.1.0</servlet.version>
+		<jsp-api.version>2.2</jsp-api.version>
 		<spring.version>4.2.1.RELEASE</spring.version>
 		<mybatis.version>3.3.0</mybatis.version>
 		<mybatis.spring.version>1.2.3</mybatis.spring.version>
-		<slf4j.version>1.6.6</slf4j.version>
-		<log4j.version>1.2.9</log4j.version>
+		<slf4j.version>1.7.7</slf4j.version>
+		<log4j.version>1.2.16</log4j.version>
 		<mysql.connector.version>5.1.29</mysql.connector.version>
 		<druid.version>1.0.16</druid.version>
 		<jstl.version>1.2</jstl.version>
@@ -35,6 +36,8 @@
 		<aspectj.version>1.8.7</aspectj.version>
 		<comlang3.version>3.4</comlang3.version>
 		<freemarker.version>2.3.12</freemarker.version>
+		<quartz.version>2.2.2</quartz.version>
+		<c3p0.version>0.9.1.1</c3p0.version>
 	</properties>
 
 	<dependencies>
@@ -43,6 +46,12 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>${servlet.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>jsp-api</artifactId>
+			<version>${jsp-api.version}</version>
 		</dependency>
 
 		<!-- spring核心包 -->
@@ -275,6 +284,25 @@
 			<version>${slf4j.version}</version>
 		</dependency>
 		<!-- log end -->
+
+		<!-- 批处理相关的Jar包 -->
+		<!-- quartz start -->
+		<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+			<version>${quartz.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz-jobs</artifactId>
+			<version>${quartz.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>c3p0</groupId>
+			<artifactId>c3p0</artifactId>
+			<version>0.9.1.1</version>
+		</dependency>
+		<!-- quartz end -->
 
 	</dependencies>
 
