--- a/src/main/resources/conf/sysHardCodeVal.properties
+++ b/src/main/resources/conf/sysHardCodeVal.properties
@@ -1,5 +1,5 @@
 SysDefaultLanguage=ZHS
-PlatformOrgID=Admin
+PlatformOrgID=ADMIN
 MenuTreeName=TZ_GD_GNCD_MENU
 DateFormate=yyyy-MM-dd
 DateTimeFormate=yyyy-MM-dd HH:mm:ss
