忽略配置文件

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,9 @@
 /target/*
 /src/main/webapp/statics/js/tmp
 /src/main/webapp/statics/js/tmp/*
+/src/main/resources/conf/jdbc.properties
+/src/main/resources/conf/cookieSession.properties
+/src/main/resources/conf/log4j.properties
+/src/main/webapp/statics/js/lib/ueditor/jsp/config.json
+/src/main/webapp/WEB-INF/web.xml
 /src/main/webapp/WEB-INF/logs/*.log
