完善站点装修功能；

--- a/src/main/resources/conf/sysHardCodeVal.properties
+++ b/src/main/resources/conf/sysHardCodeVal.properties
@@ -9,6 +9,6 @@ FileUploadMaxSize=10240000
 OrgFileUploadPath=\/statics\/uploadfiles\/orgupload
 WebsiteFileUploadPath=\/statics\/uploadfiles\/website
 TmpFileUploadPath=\/statics\/uploadfiles\/tmpfiles
-WebsiteCssPath=\/statics\/css\/website
+WebsiteCssPath=\/statics\/css\/website\/orgs
 WebsiteImgPath=\/statics\/images\/website
 WebsiteEnrollPath=\/WEB-INF\/html
