--- a/src/main/resources/conf/sysHardCodeVal.properties
+++ b/src/main/resources/conf/sysHardCodeVal.properties
@@ -11,4 +11,5 @@ WebsiteFileUploadPath=\/statics\/uploadfiles\/website
 TmpFileUploadPath=\/statics\/uploadfiles\/tmpfiles
 WebsiteCssPath=\/statics\/css\/website\/orgs
 WebsiteImgPath=\/statics\/images\/website
+WebsiteSkinsImgPath=\/statics\/images\/website\/skins
 WebsiteEnrollPath=\/WEB-INF\/html
