--- a/src/main/resources/conf/sysHardCodeVal.properties
+++ b/src/main/resources/conf/sysHardCodeVal.properties
@@ -1,8 +1,9 @@
 SysDefaultLanguage=ZHS
 PlatformOrgID=ADMIN
 MenuTreeName=TZ_GD_GNCD_MENU
-DateFormate=yyyy-MM-dd
-DateTimeFormate=yyyy-MM-dd HH:mm:ss
+DateFormat=yyyy-MM-dd
+DateTimeHMFormat=yyyy-MM-dd HH:mm
+DateTimeFormat=yyyy-MM-dd HH:mm:ss
 FileUploadDeniedExtensions=php|php3|php5|phtml|asp|aspx|ascx|jsp|cfm|cfc|pl|bat|exe|dll|reg|cgi|js|html|htm|css|bak
 ImageSuffix=jpg|jpeg|png|gif|bmp
 FileUploadMaxSize=10240000
