--- a/src/main/resources/conf/sysHardCodeVal.properties
+++ b/src/main/resources/conf/sysHardCodeVal.properties
@@ -4,6 +4,8 @@ MenuTreeName=TZ_GD_GNCD_MENU
 DateFormat=yyyy-MM-dd
 DateTimeHMFormat=yyyy-MM-dd HH:mm
 DateTimeFormat=yyyy-MM-dd HH:mm:ss
+TimeFormat=HH:mm:ss
+TimeHMFormat=HH:mm
 FileUploadDeniedExtensions=php|php3|php5|phtml|asp|aspx|ascx|jsp|cfm|cfc|pl|bat|exe|dll|reg|cgi|js|html|htm|css|bak
 ImageSuffix=jpg|jpeg|png|gif|bmp
 FileUploadMaxSize=10240000
