--- a/src/main/resources/conf/log4j.properties
+++ b/src/main/resources/conf/log4j.properties
@@ -1,6 +1,7 @@
 ### set log levels ###
 #log4j.rootLogger = debug , stdout , D , E
-log4j.rootLogger = debug , stdout , D
+log4j.rootLogger = debug , stdout , D , BatchServerStart
+log4j.category.org.springframework.jdbc.core=TRACE
 
 ###?output to the console ###
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
