20160226 唐敏敏 报名表审核

--- a/pom.xml
+++ b/pom.xml
@@ -41,10 +41,16 @@
 		<imagescaling.version>0.8.6</imagescaling.version>
 		<zxingcore.version>3.2.1</zxingcore.version>
 		<zxingse.version>3.2.1</zxingse.version>
+		<dom4j.version>1.6.1</dom4j.version>
 	</properties>
 
 	<dependencies>
-
+		<dependency>
+			<groupId>dom4j</groupId>
+			<artifactId>dom4j</artifactId>
+			<version>${dom4j.version}</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
