--- a/src/main/resources/conf/sysHardCodeVal.properties
+++ b/src/main/resources/conf/sysHardCodeVal.properties
@@ -16,3 +16,4 @@ WebsiteCssPath=\/statics\/css\/website\/orgs
 WebsiteImgPath=\/statics\/images\/website
 WebsiteSkinsImgPath=\/statics\/images\/website\/skins
 WebsiteEnrollPath=\/WEB-INF\/html
+DownloadPath=\/statics\/download
