--- a/src/main/resources/conf/tsinghuasms.properties
+++ b/src/main/resources/conf/tsinghuasms.properties
@@ -1,3 +1,3 @@
-SendSmsUrl=http:\/\/sdk2.entinfo.cn\/z_send.aspx
+SendSmsUrl=http:\/\/sdk.entinfo.cn:8061\/webservice.asmx\/mdsmssend
 sn=SDK-BBX-010-11252
 pwd=176767
