--- a/src/main/resources/conf/sysHardCodeVal.properties
+++ b/src/main/resources/conf/sysHardCodeVal.properties
@@ -17,4 +17,5 @@ WebsiteImgPath=\/statics\/images\/website
 WebsiteSkinsImgPath=\/statics\/images\/website\/skins
 WebsiteEnrollPath=\/WEB-INF\/html
 DownloadPath=\/statics\/download
-WkHtml2Pdf=D:\\wkhtmltopdf\\bin\\wkhtmltopdf.exe
+#WkHtml2Pdf=D:\\wkhtmltopdf\\bin\\wkhtmltopdf.exe
+WkHtml2Pdf=wkhtmltopdf.exe
