定义单个报名表PDF生成路径；批量打包下载RAR生成路径；

--- a/src/main/resources/conf/sysHardCodeVal.properties
+++ b/src/main/resources/conf/sysHardCodeVal.properties
@@ -18,4 +18,5 @@ WebsiteSkinsImgPath=\/statics\/images\/website\/skins
 WebsiteEnrollPath=\/WEB-INF\/html
 DownloadPath=\/statics\/download
 #WkHtml2Pdf=D:\\wkhtmltopdf\\bin\\wkhtmltopdf.exe
-WkHtml2Pdf=wkhtmltopdf.exe
+BmbSinglePdfDir=\/bmb\/singlepdf
+BmbPackRarDir=\/bmb\/packrar
