--- a/src/main/resources/conf/sysHardCodeVal.properties
+++ b/src/main/resources/conf/sysHardCodeVal.properties
@@ -17,6 +17,6 @@ WebsiteImgPath=\/statics\/images\/website
 WebsiteSkinsImgPath=\/statics\/images\/website\/skins
 WebsiteEnrollPath=\/WEB-INF\/html
 DownloadPath=\/statics\/download
-#WkHtml2Pdf=D:\\wkhtmltopdf\\bin\\wkhtmltopdf.exe
+WkHtml2Pdf=D:\\wkhtmltopdf\\bin\\wkhtmltopdf.exe
 BmbSinglePdfDir=\/bmb\/singlepdf
 BmbPackRarDir=\/bmb\/packrar
