--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -70,7 +70,8 @@
 		<welcome-file>index.jsp</welcome-file>
 		<welcome-file>login</welcome-file>
 	</welcome-file-list>
-
+	
+	<!-- Spring监听器 -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
