--- a/pom.xml
+++ b/pom.xml
@@ -352,7 +352,17 @@
 			<artifactId>httpclient</artifactId>
 			<version>${httpclient.version}</version>
 		</dependency>
-
+		
+		<dependency>
+   			<groupId>com.lowagie</groupId>
+    		<artifactId>itext</artifactId>
+    		<version>2.1.7</version>
+		</dependency>
+		<dependency>
+			<groupId>com.lowagie</groupId>
+			<artifactId>itextasian</artifactId>
+			<version>1.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
