--- a/pom.xml
+++ b/pom.xml
@@ -359,10 +359,17 @@
     		<version>2.1.7</version>
 		</dependency>
 		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itext-asian</artifactId>
+			<version>5.2.0</version>
+		</dependency>
+		<!--  
+		<dependency>
 			<groupId>com.lowagie</groupId>
 			<artifactId>itextasian</artifactId>
 			<version>1.0</version>
 		</dependency>
+		-->
 	</dependencies>
 
 	<build>
