--- a/src/main/resources/conf/log4j.properties
+++ b/src/main/resources/conf/log4j.properties
@@ -2,11 +2,12 @@
 #log4j.rootLogger = DEBUG , stdout , D , E
 log4j.rootLogger = DEBUG , stdout , D, E, BatchServerStart
 log4j.category.org.springframework.jdbc.core=TRACE
+log4j.logger.org.springframework.jdbc.core.JdbcTemplate=DEBUG
 
 ###?output to the console ###
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target = System.out
-log4j.appender.stdout.Threshold = DEBUG
+log4j.appender.stdout.Threshold = INFO
 log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
 #log4j.appender.stdout.layout.ConversionPattern = %d{ABSOLUTE} %5p %c{ 1 }:%L - %m%n
 log4j.appender.stdout.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} [%c]-[%p] %m%n
