PDF文件打印修改

--- a/src/main/resources/conf/jdbc.properties
+++ b/src/main/resources/conf/jdbc.properties
@@ -5,7 +5,7 @@ jdbc_driverClassName=com.mysql.jdbc.Driver
 #jdbc_password=GDQHJG@tz001
 jdbc_url=jdbc\:mysql\://127.0.0.1\:3306/TZGDQHJG?useUnicode\=true&characterEncoding\=utf8
 jdbc_username=TZGDQHJG
-jdbc_password=123456
+jdbc_password=GDQHJG@tz001
 #jdbc_url=jdbc\:mysql\://202.120.24.114\:3306/TZGDDEV?useUnicode\=true&characterEncoding\=utf8
 #jdbc_username=TZGDDEV
 #jdbc_password=GDDEV@tz001
