统一打印模板

--- a/src/main/resources/conf/sysHardCodeVal.properties
+++ b/src/main/resources/conf/sysHardCodeVal.properties
@@ -20,3 +20,4 @@ DownloadPath=\/statics\/download
 WkHtml2Pdf=D:\\wkhtmltopdf\\bin\\wkhtmltopdf.exe
 BmbSinglePdfDir=\/bmb\/singlepdf
 BmbPackRarDir=\/bmb\/packrar
+PrintSinglePdfDir=\/print\/singlepdf
