--- a/src/main/resources/conf/sysHardCodeVal.properties
+++ b/src/main/resources/conf/sysHardCodeVal.properties
@@ -21,3 +21,4 @@ WkHtml2Pdf=D:\\wkhtmltopdf\\bin\\wkhtmltopdf.exe
 BmbSinglePdfDir=\/bmb\/singlepdf
 BmbPackRarDir=\/bmb\/packrar
 PrintSinglePdfDir=\/print\/singlepdf
+BoxKey=A0DFDF28AEAB2F131327FEDE5C2D8A6D399E4F568A2D4EFD
