--- a/src/main/resources/conf/sysHardCodeVal.properties
+++ b/src/main/resources/conf/sysHardCodeVal.properties
@@ -6,10 +6,11 @@ DateTimeHMFormat=yyyy-MM-dd HH:mm
 DateTimeFormat=yyyy-MM-dd HH:mm:ss
 TimeFormat=HH:mm:ss
 TimeHMFormat=HH:mm
-FileUploadDeniedExtensions=php|php3|php5|phtml|asp|aspx|ascx|jsp|cfm|cfc|pl|bat|exe|dll|reg|cgi|js|html|htm|css|bak
+FileUploadDeniedExtensions=php|php3|php5|phtml|asp|aspx|ascx|jsp|cfm|cfc|pl|bat|exe|dll|reg|cgi|js|html|htm|css|bak|sh|class
 ImageSuffix=jpg|jpeg|png|gif|bmp
 FileUploadMaxSize=10240000
 OrgFileUploadPath=\/statics\/uploadfiles\/orgupload
+OrgVoiceFileUploadPath=\/statics\/uploadfiles\/voice
 WebsiteFileUploadPath=\/statics\/uploadfiles\/website
 TmpFileUploadPath=\/statics\/uploadfiles\/tmpfiles
 WebsiteCssPath=\/statics\/css\/website\/orgs
