添加面试组

--- a/src/main/resources/conf/jdbc.properties
+++ b/src/main/resources/conf/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc_driverClassName=com.mysql.jdbc.Driver
-jdbc_url=jdbc\:mysql\://112.74.75.210\:3306/TZGDQHJGUAT?useUnicode\=true&characterEncoding\=utf8
+jdbc_url=jdbc\:mysql\://112.74.75.210\:33306/TZGDQHJGUAT?useUnicode\=true&characterEncoding\=utf8
 jdbc_username=TZGDQHJGUAT
 jdbc_password=TZGDQHJGUAT
 #jdbc_url=jdbc\:mysql\://202.120.24.114\:3306/TZGDDEV?useUnicode\=true&characterEncoding\=utf8
@@ -16,3 +16,19 @@ druid_minIdle=3
 druid_removeAbandoned=true
 druid_removeAbandonedTimeout=180
 druid_connectionProperties=clientEncoding\=UTF-8
+
+
+
+#jdbc_driverClassName=com.mysql.jdbc.Driver
+#jdbc_url=jdbc\:mysql\://10.116.43.97\:3306/TZGDQHJGUAT?useUnicode\=true&characterEncoding\=utf8
+#jdbc_username=TZGDQHJGUAT
+#jdbc_password=TZGDQHJGUAT
+#druid_maxActive=500
+#druid_initialSize=1
+#druid_maxWait=60000
+#druid_maxIdle=50
+#druid_minIdle=3
+#druid_removeAbandoned=true
+#druid_removeAbandonedTimeout=14400
+#druid_connectionProperties=clientEncoding\=UTF-8
+
