--- a/.classpath
+++ b/.classpath
@@ -29,6 +29,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0"/>
-	<classpathentry kind="lib" path="D:/work/lib/bcprov-jdk15on-1.54.jar"/>
+	<classpathentry kind="lib" path="D:/bcprov-jdk15on-1.54.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
