报名表bug修改 白名单后台处理   防止参数携带js攻击

--- a/src/main/resources/conf/sysHardCodeVal.properties
+++ b/src/main/resources/conf/sysHardCodeVal.properties
@@ -23,3 +23,4 @@ BmbSinglePdfDir=\/bmb\/singlepdf
 BmbPackRarDir=\/bmb\/packrar
 PrintSinglePdfDir=\/print\/singlepdf
 BoxKey=A0DFDF28AEAB2F131327FEDE5C2D8A6D399E4F568A2D4EFD
+FileUploadAllowedExtensions=mp4|jpg|png|jpeg|pdf|doc|docx|xlsx|xls|rar|zip|ppt|pptx
