--- a/src/main/resources/conf/jdbc.properties
+++ b/src/main/resources/conf/jdbc.properties
@@ -1,7 +1,7 @@
-jdbc_driverClassName=com.mysql.jdbc.Driver
-jdbc_url=jdbc\:mysql\://112.74.75.210\:33306/TZGDQHJGUAT?useUnicode\=true&characterEncoding\=utf8
-jdbc_username=TZGDQHJGUAT
-jdbc_password=TZGDQHJGUAT
+jdbc_driverClassName=com.mysql.cj.jdbc.Driver
+jdbc_url=jdbc\:mysql\://192.168.1.40\:3306/TZGDBASE?useUnicode\=true&characterEncoding\=utf8
+jdbc_username=TZGDBASE
+jdbc_password=TZGDBASE@tz001
 #jdbc_url=jdbc\:mysql\://202.120.24.114\:3306/TZGDDEV?useUnicode\=true&characterEncoding\=utf8
 #jdbc_username=TZGDDEV
 #jdbc_password=GDDEV@tz001
